data/derived/fa15/progs/unify/prog3350.ml.out
Characters 138-144:
  |h'::t' -> h' * i @ mulByDigit i t';;
             ^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
